// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlackList Reducer create monitor fail 1`] = `
Object {
  "createMonitorError": Object {
    "errors": Array [
      Object {
        "message": "Some error occurred",
      },
    ],
  },
  "createMonitorPending": false,
  "incidents": Array [],
  "incidentsPending": false,
  "monitors": Array [],
  "monitorsPending": false,
}
`;

exports[`BlackList Reducer create monitor pending 1`] = `
Object {
  "createMonitorError": null,
  "createMonitorPending": true,
  "incidents": Array [],
  "incidentsPending": false,
  "monitors": Array [],
  "monitorsPending": false,
}
`;

exports[`BlackList Reducer create monitor success 1`] = `
Object {
  "createMonitorError": null,
  "createMonitorPending": false,
  "incidents": Array [],
  "incidentsPending": false,
  "monitors": Array [],
  "monitorsPending": false,
}
`;

exports[`BlackList Reducer list incidents fail 1`] = `
Object {
  "incidents": Array [],
  "incidentsError": Object {
    "errors": Array [
      Object {
        "message": "Some error occurred",
      },
    ],
  },
  "incidentsPending": false,
  "monitors": Array [],
  "monitorsPending": false,
}
`;

exports[`BlackList Reducer list incidents pending 1`] = `
Object {
  "incidents": Array [],
  "incidentsError": null,
  "incidentsPending": true,
  "monitors": Array [],
  "monitorsPending": false,
}
`;

exports[`BlackList Reducer list incidents success 1`] = `
Object {
  "incidents": Object {
    "fakeData": true,
  },
  "incidentsError": null,
  "incidentsPending": false,
  "monitors": Array [],
  "monitorsPending": false,
}
`;

exports[`BlackList Reducer list monitors fail 1`] = `
Object {
  "incidents": Array [],
  "incidentsPending": false,
  "monitors": Array [],
  "monitorsError": Object {
    "errors": Array [
      Object {
        "message": "Some error occurred",
      },
    ],
  },
  "monitorsPending": false,
}
`;

exports[`BlackList Reducer list monitors pending 1`] = `
Object {
  "incidents": Array [],
  "incidentsPending": false,
  "monitors": Array [],
  "monitorsError": null,
  "monitorsPending": true,
}
`;

exports[`BlackList Reducer list monitors success 1`] = `
Object {
  "incidents": Array [],
  "incidentsPending": false,
  "monitors": Object {
    "fakeData": true,
  },
  "monitorsError": null,
  "monitorsPending": false,
}
`;
